--- a/assets/pages/buyPage.html
+++ b/assets/pages/buyPage.html
@@ -58,7 +58,7 @@
               </option>
             </select>
             <label for="ticket-quantity">Ticket Quantity</label>
-            <input type="number" min="1" max="10" step="1" />
+            <input id="ticket-quantity" type="number" min="1" max="10" step="1" />
           </p>
           <p>
             <label for="name">First Name</label>
@@ -89,7 +89,7 @@
               <input id="fname" type="text" placeholder="full name on card" />
             </p>
             <p>
-              <label for="email">Email</label><br />
+              <label for="credit-card-email">Email</label><br />
               <input id="email" type="email" placeholder="example@example" />
             </p>
             <p>
